--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section class="section-3">
             <div class="txt-section-3">
                 <h2 class="h2-section-3">COMO TRABAJO?</h2>
-                <p class="p-section-3">Aquí dejo como es mi método de trabajo:</p>
+                <p class="p-section-3">Debajo dejo mi paso a paso:</p>
             </div>
             <div class="container-icons-2">
                 <div class="container-icons-info-2">
@@ -95,7 +95,7 @@
                     <i class="fa-thin fa-3"></i>
                     <p class="p-icon-2">Finalización del trabajo. Ultimar detalles.</p>
                 </div>
-                <div class="container-icons-info">
+                <div class="container-icons-info-2">
                     <i class="fa-thin fa-4"></i>
                     <p class="p-icon-2">Repaso por el trabajo realizado para evitar posibles errores. Presentación final.</p>
                 </div>               
